--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "dependencies": {
     "antd": "^3.13.2",
     "bootstrap": "^4.3.1",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
+    "firebase": "^5.9.0",
+    "react": "^16.8.6",
+    "react-bootstrap-dropdown-menu": "^1.1.15",
+    "react-dom": "^16.8.6",
+    "react-dropdown-select": "^2.2.3",
     "react-facebook-login": "^4.1.1",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "semantic-ui-css": "^2.4.1"
+    "react-sidebar": "^3.0.2",
+    "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
